org_unpackaged/unpackaged/objects/Task_List__c.object
<CustomObject>
    <fields>
        <fullName>Assign_To_MBO_User_Field_Name__c</fullName>
        <label>Assign To MBO User Field Name</label>
        <picklist>
            <picklistValues>
                <fullName>Enrollment_Manager__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rs_opsAdmin__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rs_qualAdvisor__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign the Task to a specific User. If it is blank then assign the Task to the Lead Owner.</description>
        <label>Assign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Task_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Due Days</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_Child_Tasks__c</fullName>
        <description>Total number of Child Tasks to be created upon completing this Task.</description>
        <label># Child Tasks</label>
        <summaryForeignKey>Task_Relationship__c.Parent_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parent_Field_Name__c</fullName>
        <description>Add API name of the parent field so that the system automatically updates the corresponding SLA completed field on the parent object.</description>
        <label>Parent Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of the Task.</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_To_Update_Parent_Field__c</fullName>
        <description>Update the parent object only if the Task status is none or the selected options.</description>
        <label>Status To Update Parent Field</label>
        <picklist>
            <picklistValues>
                <fullName>Attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject of the task</description>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Task Type</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Task List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Parent_Field_Name__c</columns>
        <columns>Status_To_Update_Parent_Field__c</columns>
        <columns>Assign_To_MBO_User_Field_Name__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Due_Days__c</columns>
        <columns>Num_Child_Tasks__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task List</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>